# signal-rack

./: .gitignore  README.md  ROADMAP.md  package-lock.json  package.json  playwright.config.ts  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
docs/: index.html  styles.css
e2e/: app.spec.ts
output/playwright/typeface-review-spicy/: README.md
output/typeface-review/: README.md
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: audio.rs  engine.rs  generator.rs  lfo.rs  lib.rs  main.rs  model.rs
src/main/: index.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  GeneratorLab.tsx  arpeggio.ts  backend.ts  euclidean.ts  generator.test.ts  generator.ts  modulation.ts  mutation.ts  seed.ts  styles.css  vite-env.d.ts
src/shared/: lfo.test.ts  lfo.ts  types.ts
